--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,84 +47,6 @@ jobs:
           cache-from: type=gha
           cache-to:   type=gha,mode=max
 
-  security-gate:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
-      security-events: write
-    env:
-      IMG: ${{ secrets.DOCKERHUB_USERNAME }}/myflask@${{ needs.build-and-push.outputs.image-digest }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Trivy image scan (HIGH/CRIT fail)
-        uses: aquasecurity/trivy-action@0.28.0
-        with:
-          image-ref: ${{ env.IMG }}
-          pkg-types: 'os,library'
-          severity: 'HIGH,CRITICAL'
-          ignore-unfixed: true
-          format: sarif
-          output: trivy-image.sarif
-          exit-code: '1'
-          scanners: 'vuln'
-
-      - name: Upload Trivy SARIF
-        if: always()
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-image.sarif
-
-      - name: Trivy JSON (for SeveritySource)
-        if: always()
-        run: |
-          trivy image --scanners vuln \
-            --pkg-types os,library \
-            --severity HIGH,CRITICAL \
-            --ignore-unfixed \
-            --detection-priority precise \
-            -f json -o trivy-image.json "${IMG}" || true
-
-      - name: Upload Trivy JSON
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-image-json
-          path: trivy-image.json
-          retention-days: 7
-          
-      - name: Login to Docker Hub (for cosign push)
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: SBOM (SPDX)
-        uses: anchore/sbom-action@v0
-        with:
-          image: ${{ env.IMG }}
-          format: spdx-json
-          output-file: sbom.spdx.json
-
-      - name: Install cosign
-        uses: sigstore/cosign-installer@v3.9.2
-
-      - name: Cosign sign & attest (keyless)
-        env: { COSIGN_EXPERIMENTAL: "1" }
-        run: |
-          set -euo pipefail
-          cosign sign --yes "$IMG"
-          cosign attest --yes --predicate sbom.spdx.json --type spdx "$IMG"
-
-      - name: Upload SBOM artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: sbom-spdx
-          path: sbom.spdx.json
-          retention-days: 30
 
 ###############################################################################
 # 2) Deploy to GCE VM
@@ -178,20 +100,48 @@ jobs:
             set -euo pipefail
             mkdir -p "${{ env.REMOTE_DIR }}"/{nginx,certbot/{config,www,logs}}
             mkdir -p "${{ env.REMOTE_DIR }}"/nginx/{modsec,logs,modsec-logs}
+
+            # --- Splunk HEC env defaults (빈 값이면 기본 세팅) ---
+            HEC_URL="${{ secrets.SPLUNK_HEC_URL }}"
+            [ -z "$HEC_URL" ] && HEC_URL="https://127.0.0.1:8088"   # 역SSH 터널 종단
+
+            HEC_TOKEN="${{ secrets.SPLUNK_HEC_TOKEN }}"
+            [ -z "$HEC_TOKEN" ] && echo "ERROR: SPLUNK_HEC_TOKEN secret is required" >&2 && exit 1
+
+            HEC_INDEX="${{ secrets.SPLUNK_HEC_INDEX }}"
+            [ -z "$HEC_INDEX" ] && HEC_INDEX="waf"
+
+            HEC_ST="${{ secrets.SPLUNK_HEC_SOURCETYPE }}"
+            [ -z "$HEC_ST" ] && HEC_ST="waf"
+
+            HEC_SRC="${{ secrets.SPLUNK_HEC_SOURCE }}"
+            [ -z "$HEC_SRC" ] && HEC_SRC="http:GCE_WAF"
+
+            HEC_INSEC="${{ secrets.SPLUNK_HEC_INSECURE }}"
+            [ -z "$HEC_INSEC" ] && HEC_INSEC="true"                 # 신뢰된 인증서면 false
+
             cat > "${{ env.REMOTE_DIR }}/.env" <<EOT
             DOMAIN=${{ env.DOMAIN }}
             LETSENCRYPT_EMAIL=${{ env.LETSENCRYPT_EMAIL }}
             IMAGE_REF=${{ env.IMG }}
-            DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
+
+            # Splunk HEC
+            SPLUNK_HEC_URL=${HEC_URL}
+            SPLUNK_HEC_TOKEN=${HEC_TOKEN}
+            SPLUNK_HEC_INDEX=${HEC_INDEX}
+            SPLUNK_HEC_SOURCETYPE=${HEC_ST}
+            SPLUNK_HEC_SOURCE=${HEC_SRC}
+            SPLUNK_HEC_INSECURE=${HEC_INSEC}
             EOT
           EOF
+
 
       # ── 2-a. Compose & 템플릿 업로드 ────────────────────────────────────
       - name: Upload HTTP-only Nginx template and compose
         run: |
           scp -o StrictHostKeyChecking=no nginx/default.http.conf.template \
             ${{ secrets.GCP_USER }}@${{ secrets.GCP_HOST }}:"${{ env.REMOTE_DIR }}/nginx/default.conf.template"
-          scp -o StrictHostKeyChecking=no docker-compose-prod.yml \
+          scp -o StrictHostKeyChecking=no docker-compose.prod.yml \
             ${{ secrets.GCP_USER }}@${{ secrets.GCP_HOST }}:"${{ env.REMOTE_DIR }}/"
 
       # ── 2-b. Nginx WAF build context 업로드 (Dockerfile.waf, modsec 등) ──
@@ -202,16 +152,17 @@ jobs:
             | ssh -o StrictHostKeyChecking=no ${{ secrets.GCP_USER }}@${{ secrets.GCP_HOST }} \
               "mkdir -p '${{ env.REMOTE_DIR }}/nginx' && tar -xzf - -C '${{ env.REMOTE_DIR }}/nginx'"
 
+
       # ── 3. HTTP-only 스택 기동 (nginx 먼저 빌드) ─────────────────────────
       - name: Start HTTP-only stack (build nginx)
         run: |
           ssh ${{ secrets.GCP_USER }}@${{ secrets.GCP_HOST }} "
             set -euo pipefail
             cd '${{ env.REMOTE_DIR }}' &&
-            docker compose -f docker-compose-prod.yml down --remove-orphans || true &&
-            docker compose -f docker-compose-prod.yml build --pull nginx &&
-            docker compose -f docker-compose-prod.yml pull web || true &&
-            docker compose -f docker-compose-prod.yml up -d nginx web
+            docker compose -f docker-compose.prod.yml down --remove-orphans || true &&
+            docker compose -f docker-compose.prod.yml build --pull nginx &&
+            docker compose -f docker-compose.prod.yml pull web || true &&
+            docker compose -f docker-compose.prod.yml up -d nginx web
           "
 
       # ── 4. HTTP 응답 대기 ───────────────────────────────────────────────
@@ -234,8 +185,8 @@ jobs:
         run: |
           ssh ${{ secrets.GCP_USER }}@${{ secrets.GCP_HOST }} "
             cd '${{ env.REMOTE_DIR }}' &&
-            docker compose -f docker-compose-prod.yml exec -T nginx nginx -t &&
-            docker compose -f docker-compose-prod.yml exec -T nginx sh -lc 'ls -l /usr/lib/nginx/modules | grep modsecurity || true'
+            docker compose -f docker-compose.prod.yml exec -T nginx nginx -t &&
+            docker compose -f docker-compose.prod.yml exec -T nginx sh -lc 'ls -l /usr/lib/nginx/modules | grep modsecurity || true'
           "
 
       # ── 5. 인증서 발급/갱신 ──────────────────────────────────────────────
@@ -243,7 +194,7 @@ jobs:
         run: |
           ssh ${{ secrets.GCP_USER }}@${{ secrets.GCP_HOST }} "
             cd '${{ env.REMOTE_DIR }}' &&
-            docker compose -f docker-compose-prod.yml run --rm certbot \
+            docker compose -f docker-compose.prod.yml run --rm certbot \
               certonly --webroot -w /var/www/certbot \
               --non-interactive --keep-until-expiring \
               --email '${{ env.LETSENCRYPT_EMAIL }}' -d '${{ env.DOMAIN }}' \
@@ -255,7 +206,7 @@ jobs:
         run: |
           ssh ${{ secrets.GCP_USER }}@${{ secrets.GCP_HOST }} << 'EOF'
             cd '${{ env.REMOTE_DIR }}'
-            docker compose -f docker-compose-prod.yml run --rm --entrypoint "" certbot sh -euxc '
+            docker compose -f docker-compose.prod.yml run --rm --entrypoint "" certbot sh -euxc '
               OPTIONS=/etc/letsencrypt/options-ssl-nginx.conf
               DHPARAM=/etc/letsencrypt/ssl-dhparams.pem
               mkdir -p /etc/letsencrypt
@@ -295,7 +246,7 @@ jobs:
         run: |
           ssh ${{ secrets.GCP_USER }}@${{ secrets.GCP_HOST }} << 'EOF'
             cd '${{ env.REMOTE_DIR }}' &&
-            docker compose -f docker-compose-prod.yml exec nginx sh -c '
+            docker compose -f docker-compose.prod.yml exec nginx sh -c '
              envsubst '\''$DOMAIN'\'' \
                < /etc/nginx/templates/default.conf.template \
                > /etc/nginx/conf.d/default.conf \
@@ -309,9 +260,9 @@ jobs:
           ssh ${{ secrets.GCP_USER }}@${{ secrets.GCP_HOST }} "
             set -euo pipefail
             cd '${{ env.REMOTE_DIR }}' &&
-            docker compose -f docker-compose-prod.yml build --pull nginx &&
-            docker compose -f docker-compose-prod.yml pull &&
-            docker compose -f docker-compose-prod.yml up -d --remove-orphans
+            docker compose -f docker-compose.prod.yml build --pull nginx &&
+            docker compose -f docker-compose.prod.yml pull &&
+            docker compose -f docker-compose.prod.yml up -d --remove-orphans
           "
 
       # ── 10. HTTPS 검증 ──────────────────────────────────────────────────
