--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -312,12 +312,33 @@ jobs:
       # ── 10. HTTPS 검증 ──────────────────────────────────────────────────
       - name: Verify HTTPS
         run: |
+          ok=0
           for i in {1..12}; do
             if curl -sSf -m 5 https://${{ env.DOMAIN }} >/dev/null 2>&1; then
-              echo "HTTPS OK"; break
+              echo "HTTPS OK"
+              ok=1
+              break
             fi
             echo "...waiting HTTPS (${i}/12)"; sleep 10
           done
+          if [ "$ok" -ne 1 ]; then
+            echo "HTTPS verification failed for https://${{ env.DOMAIN }}"
+            exit 1
+          fi
+
+      - name: Diagnose HTTPS failure
+        if: failure()
+        run: |
+          ssh ${{ secrets.GCP_USER }}@${{ secrets.GCP_HOST }} "
+            set -x
+            cd '${{ env.REMOTE_DIR }}'
+            docker compose -f docker-compose.prod.yml ps
+            docker compose -f docker-compose.prod.yml logs --tail=150 nginx || true
+            ls -al certbot/config/live/${{ env.DOMAIN }} || true
+            ls -al certbot/config || true
+            ss -ltnp | grep ':443' || true
+            curl -vk --max-time 10 https://${{ env.DOMAIN }} || true
+          "
 
       # ── 11. 오래된 이미지 정리 ──────────────────────────────────────────
       - name: Prune images
